fix: missing menu on firefox
closes #51

--- a/packages/userscript/src/style.css
+++ b/packages/userscript/src/style.css
@@ -61,8 +61,16 @@
     animation: fadeIn .3s;
 }
 
-#exporter-menu:not(:has(.dropdown-backdrop:hover)):hover .dropdown-menu {
-    display: flex;
+@supports not selector(:has(.test:hover)) {
+    #exporter-menu:hover .dropdown-menu {
+        display: flex;
+    }
+}
+
+@supports selector(:has(.test:hover)) {
+    #exporter-menu:not(:has(.dropdown-backdrop:hover)):hover .dropdown-menu {
+        display: flex;
+    }
 }
 
 @media screen and (hover: none) and (max-width: 768px) {
